--- a/src/components/ReviewCard.css
+++ b/src/components/ReviewCard.css
@@ -79,3 +79,18 @@
 .star-icon {
     color: #5caaaa;
 }
+
+@media (max-width: 768px) {
+
+    .heading > h2 {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .reviewss {
+        display: flex;
+        flex-direction: column;
+
+    }
+}
