--- a/src/components/WhyQwikway.css
+++ b/src/components/WhyQwikway.css
@@ -27,3 +27,9 @@
     white-space: normal;
     padding-bottom: 0.5rem;
 }
+
+@media (max-width: 768px) {
+    .cardd {
+        margin-left: -70px;
+    }
+}
